# an_analysis_of_nothing

./: .gitignore  README.md  environment.yml  pylintrc  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build_test.yml
an_analysis_of_nothing/: README.md  app.py  requirements.txt
an_analysis_of_nothing/app/: app.py  util.py
an_analysis_of_nothing/app/data/: imdb.csv
an_analysis_of_nothing/app_pages/: write_about_page.py  write_episode_query.py  write_home_page.py  write_recommender_page.py
an_analysis_of_nothing/static/: README.md
an_analysis_of_nothing/static/data/: .gitattributes  README.md  dialogue_tensor.pt  metadata.csv
an_analysis_of_nothing/static/images/: README.md
an_analysis_of_nothing/tests/: mock_functions.py  test_data_manager.py  test_episode_query.py  test_recommender.py
an_analysis_of_nothing/utils/: data_constants.py  data_manager.py  episode_query.py  recommender.py
data/: README.md
data_tools/: _scrape_epi_pages.py  data_constants.py  load_data.py
doc/: Component_Specification.md  Functional_Specification.md  README.md  Technology Review.pptx  Technology_Review.pptx  use_cases  use_cases.md
examples/: README.md  data.ipynb  site_navigation.ipynb  site_navigation.md
examples/images/: README.md
scripts/: README.md  get_final_data.py  get_final_data.sh
scripts/data_tools/: _scrape_epi_pages.py  data_constants.py  load_data.py
scripts/precompute_tools/: query_vectors.py  sentiment.py
